[gd_scene load_steps=25 format=2]

[ext_resource path="res://Buttons/tile_0651.png" type="Texture" id=1]
[ext_resource path="res://Game/Goalie/GoalieDefault.png" type="Texture" id=2]
[ext_resource path="res://Fonts/superstar_memesbruh03.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/Kicker/KickerDefault.png" type="Texture" id=4]
[ext_resource path="res://Game/Field Assets/ScreenEffects.tscn" type="PackedScene" id=5]
[ext_resource path="res://LocalMenu/MenuBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buttons/XboxA.png" type="Texture" id=7]
[ext_resource path="res://Buttons/XboxB.png" type="Texture" id=8]
[ext_resource path="res://LocalMenu/LocalMenu.gd" type="Script" id=9]
[ext_resource path="res://Buttons/XboxX.png" type="Texture" id=10]
[ext_resource path="res://Buttons/tile_0251.png" type="Texture" id=11]
[ext_resource path="res://Buttons/tile_0321.png" type="Texture" id=12]
[ext_resource path="res://Buttons/tile_0588.png" type="Texture" id=13]
[ext_resource path="res://Buttons/tile_0320.png" type="Texture" id=14]
[ext_resource path="res://Buttons/tile_0592.png" type="Texture" id=15]
[ext_resource path="res://Game/BluePlayer.tres" type="Material" id=16]
[ext_resource path="res://Game/ColorShader.tres" type="Material" id=17]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 0.75

[sub_resource type="DynamicFont" id=3]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 38
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="LocalMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" parent="Background" instance=ExtResource( 6 )]

[node name="Blur" type="ColorRect" parent="Background"]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenEffects" parent="Background" instance=ExtResource( 5 )]

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 160
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 60.0
margin_top = 160.0
margin_right = 1860.0
margin_bottom = 1020.0
custom_constants/separation = 140

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 170.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Main/VBoxContainer/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 20
custom_constants/shadow_offset_y = 20
text = "Pixel Penalty"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 1800.0
margin_bottom = 170.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 799.0
margin_right = 831.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Controls" type="Label" parent="Main/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 851.0
margin_right = 1001.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "Controls"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Main/VBoxContainer"]
margin_top = 310.0
margin_right = 1800.0
margin_bottom = 671.0

[node name="HSplitContainer" type="HBoxContainer" parent="Main/VBoxContainer/CenterContainer"]
margin_left = 513.0
margin_right = 1286.0
margin_bottom = 361.0
custom_constants/separation = 300

[node name="Player1" type="VBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer"]
margin_right = 238.0
margin_bottom = 361.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1"]
margin_right = 238.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "player one"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1"]
margin_top = 71.0
margin_right = 238.0
margin_bottom = 110.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1/HBoxContainer"]
margin_left = 84.0
margin_right = 206.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "to ping"
align = 1
valign = 1

[node name="Picture" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1"]
material = ExtResource( 17 )
margin_top = 130.0
margin_right = 238.0
margin_bottom = 290.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1"]
margin_top = 310.0
margin_right = 238.0
margin_bottom = 361.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1/HBoxContainer2"]
margin_left = 5.0
margin_right = 50.0
margin_bottom = 51.0
rect_min_size = Vector2( 45, 45 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Ready" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player1/HBoxContainer2"]
margin_left = 60.0
margin_right = 232.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0.407843 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "unready"
align = 1
valign = 1

[node name="Player2" type="VBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer"]
margin_left = 538.0
margin_right = 773.0
margin_bottom = 361.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2"]
margin_right = 235.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "player two"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2"]
margin_top = 66.0
margin_right = 235.0
margin_bottom = 105.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2/HBoxContainer"]
margin_left = 30.0
margin_right = 62.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2/HBoxContainer"]
margin_left = 82.0
margin_right = 204.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "to ping"
align = 1
valign = 1

[node name="Picture" type="CenterContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2"]
margin_top = 120.0
margin_right = 235.0
margin_bottom = 280.0

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2/Picture"]
material = ExtResource( 16 )
margin_left = 37.0
margin_right = 197.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2"]
margin_top = 295.0
margin_right = 235.0
margin_bottom = 346.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2/HBoxContainer2"]
margin_left = 4.0
margin_right = 49.0
margin_bottom = 51.0
rect_min_size = Vector2( 45, 45 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Ready" type="Label" parent="Main/VBoxContainer/CenterContainer/HSplitContainer/Player2/HBoxContainer2"]
margin_left = 59.0
margin_right = 231.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0.407843 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "unready"
align = 1
valign = 1

[node name="Controls" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1920.0
custom_constants/margin_right = 60
custom_constants/margin_top = 160
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Controls"]
margin_left = 60.0
margin_top = 160.0
margin_right = 1860.0
margin_bottom = 1020.0
custom_constants/separation = 140

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/VBoxContainer2"]
margin_right = 1800.0
margin_bottom = 170.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Controls/VBoxContainer2/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 20
custom_constants/shadow_offset_y = 20
text = "Pixel Penalty"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/VBoxContainer2/VBoxContainer"]
margin_top = 131.0
margin_right = 1800.0
margin_bottom = 170.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 793.0
margin_right = 825.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Controls" type="Label" parent="Controls/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 845.0
margin_right = 1007.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Controls/VBoxContainer2"]
margin_top = 310.0
margin_right = 1800.0
margin_bottom = 681.0

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer"]
margin_left = 403.0
margin_right = 1396.0
margin_bottom = 371.0
custom_constants/separation = 300

[node name="Goalie" type="VBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer"]
margin_right = 347.0
margin_bottom = 371.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie"]
margin_right = 347.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "Goalie"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie"]
margin_top = 81.0
margin_right = 347.0
margin_bottom = 131.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer"]
margin_left = 70.0
margin_top = 5.0
margin_right = 347.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "move left/right"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie"]
margin_top = 161.0
margin_right = 347.0
margin_bottom = 211.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer2"]
margin_left = 70.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "aim dive"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie"]
margin_top = 241.0
margin_right = 347.0
margin_bottom = 291.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer3"]
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Goalie/HBoxContainer3"]
margin_left = 140.0
margin_top = 5.0
margin_right = 314.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "dive/jump"
align = 1
valign = 1

[node name="Kicker" type="VBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer"]
margin_left = 647.0
margin_right = 993.0
margin_bottom = 371.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker"]
margin_right = 346.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "Kicker"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker"]
margin_top = 81.0
margin_right = 346.0
margin_bottom = 131.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer"]
margin_left = 70.0
margin_top = 5.0
margin_right = 346.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "aim (left/right)"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker"]
margin_top = 161.0
margin_right = 346.0
margin_bottom = 211.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer2"]
margin_left = 70.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "aim (up/down)"
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker"]
margin_top = 241.0
margin_right = 346.0
margin_bottom = 291.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer4"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer4"]
margin_left = 70.0
margin_top = 5.0
margin_right = 289.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "adjust power"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker"]
margin_top = 321.0
margin_right = 346.0
margin_bottom = 371.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer3"]
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="ButtonPrompt" type="Label" parent="Controls/VBoxContainer2/CenterContainer/HBoxContainer/Kicker/HBoxContainer3"]
margin_left = 140.0
margin_top = 5.0
margin_right = 233.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "shoot"
align = 1
valign = 1

[node name="Balls" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3840.0
margin_right = 3840.0
custom_constants/margin_right = 60
custom_constants/margin_top = 140
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Balls"]
margin_left = 60.0
margin_top = 140.0
margin_right = 1860.0
margin_bottom = 1020.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Balls/VBoxContainer2"]
margin_right = 1800.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.223529 )
custom_constants/shadow_offset_x = 20
custom_constants/shadow_offset_y = 20
text = "Sex 2"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Balls/VBoxContainer2"]
margin_top = 131.0
margin_right = 1800.0
margin_bottom = 170.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Balls/VBoxContainer2/HBoxContainer"]
margin_left = 793.0
margin_right = 825.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Controls" type="Label" parent="Balls/VBoxContainer2/HBoxContainer"]
margin_left = 845.0
margin_right = 1007.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.301961, 0.309804, 0.364706, 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="TweenFade" type="Tween" parent="."]

[node name="TweenSwipe" type="Tween" parent="."]
